tests/istio_testcases/example_policies/sidecar_examples_w_onlineboutique/sidecar_disables_egress/sidecar-disable-egress1.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: frontend
spec:
  workloadSelector:
    labels:
      app: frontend
  egress:
  - hosts:
      - "~/*"
