tests/istio_testcases/example_policies/sidecar_examples_w_onlineboutique/sidecar_disables_egress/sidecar-disable-egress2.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: frontend
spec:
  workloadSelector:
    labels:
      app: frontend
  egress:
  - hosts:
      - "~/cartservice." # also disables all egress for the 'frontend' workloads - same behaviour on live-cluster
