tests/istio_testcases/example_policies/sidecar_examples_w_onlineboutique/sidecar_disables_egress/sidecars-disable-egress-scheme.yaml
resourceList:
  - ../../online_boutique/new_online_boutique_manifests_istio/all_deployments.yaml
  - ../onlineboutique-services.yaml

networkConfigList:
  - name: sidecar_disable_egress
    networkPolicyList:
      - ./sidecar-disable-egress1.yaml
    expectedWarnings: 0

  - name: sidecar_disable_egress_v2
    networkPolicyList:
      - ./sidecar-disable-egress2.yaml
    expectedWarnings: 0

queries:
  - name: frontend_w_no_egress_connectivity_map
    connectivityMap:
      - sidecar_disable_egress
    expected: 0
    expectedOutput: ../../../expected_output/connectivity_map_online_boutique_frontend_sidecar_disable_egress.txt

  - name: frontend_w_no_egress_connectivity_map_v2
    connectivityMap:
      - sidecar_disable_egress_v2
    expected: 0
